<resources>
    //имена окон
    <string name="app_name">RTPhysics</string>
    <string name="handbook_name">Справочник</string>
    <string name="calculator_name">Калькулятор</string>
    <string name="conventer_name">Конвентер</string>
    <string name="search_name">Поиск</string>
    <string name="title_activity_fcalculator_main">Калькулятор формулы</string>

    <string name="action_settings">Настройки</string>
    <string name="action_favorite">Избранное</string>

    //разделитель бокового меню
    <string name="navigation_drawer_menu_settings">Параметры</string>

    //разделы бокового меню
    <string name="navigation_drawer_action_handbook">Справочник</string>
    <string name="navigation_drawer_action_calculator">Калькулятор</string>
    <string name="navigation_drawer_action_conventer">Конвентер</string>
    <string name="navigation_drawer_action_search">Поиск</string>
    <string name="navigation_drawer_action_exit">Выход</string>

    //разделы справочника
    <string name="handbook_menu_section_mechanics">Механика</string>
    <string name="handbook_menu_section_dynamics">Динамика</string>
    <string name="handbook_menu_section_mkt">МКТ</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_search">SearchActivity</string>

    <string name="corporation_name">7bytes</string>
    <string name="icon_description">Icon of application</string>

    <string name="calculator_preferences_title">Форматирование</string>
    <string name="calculator_preferences_number_of_digits">Количество символов в выводе</string>

    <string name="handbook_preferences_title">Форматирование текста</string>
    <string name="handbook_preferences_text_size">Размер шрифта</string>
    <string name="handbook_preferences_text_color">Цвет текста</string>

    //calc
    <string name="calc_button_digit1">1</string>
    <string name="calc_button_digit2">2</string>
    <string name="calc_button_digit3">3</string>
    <string name="calc_button_digit4">4</string>
    <string name="calc_button_digit5">5</string>
    <string name="calc_button_digit6">6</string>
    <string name="calc_button_digit7">7</string>
    <string name="calc_button_digit8">8</string>
    <string name="calc_button_digit9">9</string>
    <string name="calc_button_digit0">0</string>

    <string name="calc_button_add">+</string>
    <string name="calc_button_sub">-</string>
    <string name="calc_button_mult">*</string>
    <string name="calc_button_div">/</string>
    <string name="calc_button_exp">^</string>

    <string name="calc_button_dot">.</string>
    <string name="calc_button_left_paren">(</string>
    <string name="calc_button_right_paren">)</string>
    <string name="calc_button_func">fn</string>
    <string name="calc_button_symb">cn</string>

    <string name="calc_button_func_last"></string>
    <string name="calc_button_symb_last"></string>
    <string name="calc_button_del">del</string>
    <string name="calc_button_clr">clr</string>
    <string name="calc_button_enter">=</string>

    <string name="calculator_incorrect_input">Некорректный ввод</string>
    <string name="action_search">Поиск</string>

    <string-array name="functions_array"> //don't change the order of trigonometry!
        <item>return</item>
        <item>sin(</item>
        <item>cos(</item>
        <item>tg(</item>
        <item>ctg(</item>
        <item>log(</item>
        <item>ln(</item>
    </string-array>

    <string-array name="functions_array_reverse">
        <item></item>
        <item>arcsin(</item>
        <item>arccos(</item>
        <item>arctg(</item>
        <item>arcctg(</item>
        <item></item>
    </string-array>

    <string-array name="symbols_array">
        <item>return</item>
        <item>\u03c0</item> //pi
        <item>e</item>
        <item>g</item>
    </string-array>

    <string-array name="symbols_array_values">
        <item></item>
        <item>3.1415926535</item>
        <item>2.7182818284</item>
        <item>10</item>
    </string-array>

    <string-array name="Механика">
        <item>s=v*t</item>
        <item></item>
        <item></item>
        <item>a=(v^2)/b</item>
        <item>v=v0+a*t</item>
        <item></item>
        <item></item>
        <item>p=m*v</item>
        <item>F=m*a</item>
        <item>P=m*g</item>
        <item>F=m*N</item>
        <item>F=k*(x-x)</item>
        <item></item>
        <item>W=m*g*h</item>
        <item>W=m*g*h</item>
        <item>W=(m*v^2)/2</item>
        <item>A=F*(s-s)*cos(a)</item>
        <item>W=W+W</item>
        <item></item>
        <item>I=m*R^2</item>
        <item>I=1/2*m*R^2</item>
        <item>I=2/5*m*R^2</item>
        <item>I=1/12*m*l^2</item>
        <item>I=i+m*d^2</item>
        <item>I=i+m*d^2</item>
        <item>M=F*l</item>
        <item>M=I*e</item>
        <item>M=I*e</item>
        <item>L=I*w</item>
        <item>M=I*w</item>
        <item></item>
        <item>W=(I*w^2)/2</item>
        <item>A+M*(f2-f1)</item>
    </string-array>

    <string-array name="Термодинамика">
        <item>v=m/n</item>
        <item>p=1/3*m*n*v^2</item>
        <item>v=(3*R*T/m)^(1/2)</item>
        <item>e=3/2*k*T</item>
        <item>p=n*k*T</item>
        <item></item>
        <item></item>
        <item></item>
        <item>p*v=n*R*T</item>
        <item></item>
        <item></item>
        <item>U=3/2*v*R*T</item>
        <item>Q=A+U</item>
        <item>C=Q/T</item>
    </string-array>

    <string-array name="Электричество_и_электромагнетизм">
        <item>F=k*Q*Q/r^2</item>
        <item>E=F/q</item>
    </string-array>

    <string-array name="Колебания_и_волны">
        <item>w=(w^2-2*b^2)^(1/2)</item>
        <item>W=1/2*m*(A^2)*(w^2)</item>
    </string-array>
</resources>